# MMDOCR-HighPerformance

./: .gitignore  MMDOCR-HighPerformance.sln  README.md
MMDOCR-HighPerformance/: BBoxUtils.h  CMakeLists.txt  CRAFT.cu  CRAFT.h  CTCDecoder.cpp  CTCDecoder.h  CUDAContext.h  CUDADeviceMemory.h  CUDAEvent.h  CUDAHostMemory.h  CUDAStream.h  CUDAThreadContext.h  CompareTextRegions.cu  CompareTextRegions.h  ExtractChangedFrames.cu  ExtractChangedFrames.h  ExtractContiguousTextRegions.cu  ExtractContiguousTextRegions.h  ExtractTextRegions.cu  ExtractTextRegions.h  FPSCounter.h  MMDOCR-HighPerformance.vcxproj  MMDOCR-HighPerformance.vcxproj.filters  NvInferContext.h  NvInferEngine.h  NvInferRuntime.h  OCR.cu  OCR.h  PreprocessNV12.cu  PreprocessNV12.h  RgbBytesToRgbFp32.cu  RgbBytesToRgbFp32.h  SubtitleGenerator.cc  SubtitleGenerator.h  common.cc  common.h  main.cc
MMDOCR-HighPerformance/NvCodecs/NvDecoder/: NvDecoder.cpp
MMDOCR-HighPerformance/NvCodecs/Utils/: FFmpegDemuxer.h  NvCodecUtils.h
MMDOCR-HighPerformance/OpenCV/include/opencv2/: cvconfig.h
MMDOCR-HighPerformance/TensorRT/include/: NvInfer.h  NvInferPlugin.h  NvInferPluginUtils.h  NvInferVersion.h  NvUtils.h
service/: alphabet.txt  main.py
